# ceres

./: .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.asciidoc  README.md  TODO.md
.ci/: azure-pipelines.yml
.ci/templates/: install_dependencies.yml
.distribution/deb/: Makefile
.distribution/deb/templates/DEBIAN/: postinst
.github/workflows/: ci.yml
contrib/: cil  cssh
crates/pivotal_api/: Cargo.toml
crates/pivotal_api/src/: lib.rs
distribution/deb/: Makefile
distribution/deb/templates/DEBIAN/: control
docs/: Makefile  ceres.1.md  ceres.conf.5.md
docs/man1/: ceres.1
docs/man5/: ceres.conf.5
examples/: ceres.conf
includes/: stories.export.markdown.hbs
redirects/: centerdevice.md
src/: config.rs  lib.rs  main.rs  run_config.rs
src/modules/: mod.rs
src/modules/centerdevice/: auth.rs  collections.rs  delete.rs  download.rs  mod.rs  search.rs  upload.rs  users.rs
src/modules/consul/: list.rs  mod.rs
src/modules/health/: check.rs  mod.rs
src/modules/infrastructure/: mod.rs
src/modules/infrastructure/asp/: build.rs  list.rs  mod.rs
src/modules/infrastructure/images/: build.rs  list.rs  mod.rs
src/modules/infrastructure/resources/: build.rs  list.rs  mod.rs
src/modules/instances/: list.rs  mod.rs  run.rs  ssh.rs  start.rs  stop.rs  terminate.rs
src/modules/ops/: mod.rs
src/modules/ops/asp/: mod.rs  run.rs
src/modules/ops/issues/: browse.rs  create.rs  mod.rs
src/modules/ops/webserver/: backup.rs  mod.rs
src/modules/statuspages/: mod.rs  show.rs
src/modules/stories/: export.rs  mod.rs  pivotal_api.rs  prepare.rs  start.rs
src/output/: mod.rs  table_output.rs
src/output/centerdevice/: collections.rs  mod.rs  search.rs  upload.rs  users.rs
src/output/consul/: json_output.rs  mod.rs  plain_output.rs  table_output.rs
src/output/health/: mod.rs
src/output/infrastructure/: mod.rs
src/output/instances/: json_output.rs  mod.rs  plain_output.rs  table_output.rs
src/output/statuspages/: mod.rs
src/output/stories/: json_output.rs  markdown_output.rs  mod.rs
src/provider/: aws.rs  mod.rs
src/utils/: mod.rs
tests/: Makefile  it_completions.sh  it_instances.rs
use_cases/: Makefile  list_instances_with_filter.expected
