[package]
name = "ceres"
version = "0.0.20"
authors = ["Lukas Pustina <lukas@pustina.net>"]
description = "SRE Tool for CenterDevice"
repository = "https://github.com/lukaspustina/ceres.git"
homepage = "https://github.com/lukaspustina/ceres"

[badges]
travis-ci = { repository = "lukaspustina/ceres", branch = "master" }
codecov = { repository = "lukaspustina/ceres", branch = "master", service = "github" }

[dependencies]
clams = "^0.0.9"
clams-derive = "^0.0.4"
clap = "^2.31"
colored = "^1.6"
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.0.11"
error-chain = "^0.11"
log = "^0.4"
fern = { version = "^0.5", features = ["colored"] }
futures = "0.1"
ignore = "0.4.2"
hubcaps = "^0.4"
human-panic = "^1.0"
itertools = "^0.7"
prettytable-rs = "^0.7"
regex = "^1.0"
hyper = "0.12.6" # Strongly connected to reqwest
reqwest = { version = "0.8.6", features = ["unstable"] }
rusoto_core = "0.31.0"
rusoto_credential = "0.10.0"
rusoto_ec2 = "0.31.0"
rusoto_sts = "0.31.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
service_world = "^0.1"
subprocess = "^0.1"
tempfile = "^3"
tokio-core = "^0.1"
toml = "^0.4"
webbrowser = "^0.2"

[dev-dependencies]
quickcheck = "^0.6"
spectral = "^0.6"
