[package]
name = "ceres"
version = "0.0.29"
authors = ["Lukas Pustina <lukas@pustina.net>"]
description = "SRE Tool for CenterDevice"
repository = "https://github.com/centerdevice/ceres.git"
homepage = "https://github.com/centerdevice/ceres"

[badges]
travis-ci = { repository = "centerdevice/ceres", branch = "master" }
codecov = { repository = "centerdevice/ceres", branch = "master", service = "github" }

[dependencies]
centerdevice = "0.3.10"
clams = "^0.0.16"
clams-derive = "^0.0.6"
clap = "^2.31"
colored = "^1.6"
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.0.11"
error-chain = "^0.12"
log = "^0.4"
failure = "0.1"
fern = { version = "^0.5", features = ["colored"] }
futures = "0.1"
ignore = "0.4.2"
handlebars = "2.0"
hubcaps = "^0.4"
human-panic = "^1.0"
itertools = "^0.7"
mime = "0.2"
mime_guess = "1.8"
prettytable-rs = "^0.7"
regex = "^1.0"
hyper = "0.11.9" # Strongly connected to reqwest
reqwest = { version = "0.8.6", features = ["unstable"] }
rusoto_core = "0.31.0"
rusoto_credential = "0.10.0"
rusoto_ec2 = "0.31.0"
rusoto_sts = "0.31.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
service_world = "^0.1"
subprocess = "^0.1"
tempfile = "^3"
tokio-core = "^0.1"
toml = "^0.5"
webbrowser = "^0.2"

[dev-dependencies]
quickcheck = "^0.6"
spectral = "^0.6"
