[package]
name = "ceres"
version = "0.0.38"
authors = ["Lukas Pustina <lukas@pustina.net>"]
description = "SRE Tool for CenterDevice"
repository = "https://github.com/centerdevice/ceres.git"
homepage = "https://github.com/centerdevice/ceres"

[badges]
travis-ci = { repository = "centerdevice/ceres", branch = "master" }
codecov = { repository = "centerdevice/ceres", branch = "master", service = "github" }

[workspace]
members = [
  "crates/pivotal_api"
]

[dependencies]
centerdevice = { version = "0.5.1", git = "https://github.com/centerdevice/centerdevice-rs", branch = "reqwest-0.9" }
clams = "^0.0.16"
clams-derive = "^0.0.6"
clap = "^2.31"
colored = "^1.6"
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.0.11"
error-chain = "^0.12"
log = "^0.4"
failure = "0.1"
fern = { version = "^0.5", features = ["colored"] }
futures = "0.1"
ignore = "0.4.2"
handlebars = "^3"
hubcaps = { git = "https://github.com/softprops/hubcaps", rev = "855b86c0608e672816a84d3e3132cb967d7d8dd1", default-features = false, features = ["rustls"] }
human-panic = "^1.0"
itertools = "^0.7"
mime = "0.2"
mime_guess = "1.8"
prettytable-rs = "^0.7"
regex = "^1.0"
hyper = "0.14.3" # Strongly connected to reqwest
pivotal_api = { path = "crates/pivotal_api" }
reqwest = { version = "0.9.8", default-features = false, features = ["rustls-tls"] }
rusoto_core = { version = "0.34.0", default-features = false, features = ["rustls"] }
rusoto_ec2 = { version = "0.34.0", default-features = false, features = ["rustls"] }
rusoto_credential = { version = "0.13.0" }
rusoto_sts = { version = "0.34.0", default-features = false, features = ["rustls"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
service_world = "^0.2"
subprocess = "^0.2"
tempfile = "^3"
tokio-core = "^0.1"
toml = "^0.5"
webbrowser = "^0.2"

[dev-dependencies]
quickcheck = "^0.6"
spectral = "^0.6"
