[package]
name = "pivotal_api"
version = "0.0.1"
authors = ["Lukas Pustina <lukas@pustina.net>"]
description = "Pivotal API"
repository = "https://github.com/centerdevice/ceres.git"
homepage = "https://github.com/centerdevice/ceres"
workspace = "../.."

[dependencies]
error-chain = "^0.12"
log = "^0.4"
futures = "0.1"
hyper = "0.11.9" # Strongly connected to reqwest
reqwest = { version = "0.8.6", features = ["unstable"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
tokio-core = "^0.1"

[dev-dependencies]
quickcheck = "^0.6"
spectral = "^0.6"
